modules/plugin/base/src/nsPluginHost.h
@@ -160,7 +160,7 @@ public:
   void RemoveIdleTimeTarget(nsIPluginInstanceOwner* objectFrame);
 
 #ifdef MOZ_IPC
-  void PluginCrashed(nsNPAPIPlugin* plugin);
+  void PluginCrashed(nsNPAPIPlugin* plugin, const nsAString& dumpID);
 #endif
 
   nsPluginInstanceTag *FindInstanceTag(nsIPluginInstance *instance);
